
****** Release 0.1.1 ******

2003-04-22  Alexander Hollinger <alexander.hollinger@gmx.net>
	
	* globas.c: changed version from 0.0.11 to 0.1.1

2003-05-06  Sebastian Gutsfeld  <segoh@gmx.net>

	* aliens.c (aliensMissileMove): added test if there is an alien
	ship left when starting a new missile; this was the bug which is
	responsible for freezing the game when shooting at the last alien

2003-05-05  Sebastian Gutsfeld  <segoh@gmx.net>

	* nInvaders.c (readInput): updated readInput for reading input in
	different states (see status var)

	* nInvaders.c (handleTimer): added code for status GAME_HIGHSCORE
	so a title screen with animation is shown; updated status
	GAME_OVER

	* nInvaders.c (main): updated status initialisation from
	GAME_NEXTLEVEL to GAME_HIGHSCORE

	* view.c: added WINDOW wTitleScreen; added titleScreenInit; added
	titleScreenDisplay; added titleScreenClear; added battleFieldClear

	* view.c (aliensRefresh): formatted some code

	* view.c (ufoRefresh): fixed array length

	* view.c (gameOverDisplay): simpified function

	* view.c (graphicEngineInit): updated with titleScreenInit

	* view.h: sorted function declarations; updated gameOverDisplay,
	titleScreenClear, titleScreenDisplay and battleFieldClear

2003-04-22  Alexander Hollinger <alexander.hollinger@gmx.net>

	* globals.c (doSleep): added again. still needed in 
	  view.c. added "#ifdef win32" instruction again.

2003-04-22  Alexander Hollinger <alexander.hollinger@gmx.net>
	
	* globals.c (doSleep): deleted method. not used any more.

	* globals.c: incremented version number from 0.0.10 to 0.0.11
	
	* globals.c: removed '#ifdef win32' instruction.
	
	* *.c, *.h: added license notice to each file
	
	* renamed ToDo to TODO

2003-04-18  Alexander Hollinger <alexander.hollinger@gmx.net>

	* nInvaders.c (finish): "barely mediocre" and "show promise"
	  both "< 10000". Changed latter to "< 12500"

2003-04-17  Alexander Hollinger <alexander.hollinger@gmx.net>
